--- a/FirePlatform.Mobile/FirePlatform.Mobile/Pages/FormListPage.xaml
+++ b/FirePlatform.Mobile/FirePlatform.Mobile/Pages/FormListPage.xaml
@@ -1,19 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FirePlatform.Mobile.Pages.FormListPage">
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage
+    xmlns ="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="FirePlatform.Mobile.Pages.FormListPage"
+    BackgroundColor="#feb700">
     <ContentPage.Content>
         <ListView
-                   ItemsSource    ="{Binding ReportedForms}"
-            SelectedItem="{Binding SelectedForm}"
-                   BackgroundColor="Transparent">
+            ItemsSource    ="{Binding ReportedForms}"
+            SelectedItem   ="{Binding SelectedForm}"
+            BackgroundColor="Transparent">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
-                            <StackLayout>
-                                <Label HorizontalOptions="Center" FontSize="Micro" Text="{Binding Name}"/>
-                            </StackLayout>
+                            <Frame
+                                BorderColor    ="#feb700"
+                                BackgroundColor="Silver">
+                                <StackLayout>
+                                    <Label
+                                        HorizontalOptions="Center"
+                                        FontSize         ="Micro"
+                                        TextColor        ="Black"
+                                        BackgroundColor  ="Transparent"
+                                        Text             ="{Binding Name}" />
+                                </StackLayout>
+                            </Frame>
                         </ViewCell.View>
                     </ViewCell>
                 </DataTemplate>
