--- a/FirePlatform.Mobile/FirePlatform.Mobile/Pages/HomePage.xaml
+++ b/FirePlatform.Mobile/FirePlatform.Mobile/Pages/HomePage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage
-    xmlns                         ="http://xamarin.com/schemas/2014/forms"
-    xmlns:x                        ="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class                        ="FirePlatform.Mobile.Pages.HomePage"
-    xmlns:syncfusion               ="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
-    xmlns:data                     ="clr-namespace:Syncfusion.DataSource;assembly=Syncfusion.DataSource.Portable"
-    xmlns:pageModels               ="clr-namespace:FirePlatform.Mobile.PageModels"
-    xmlns:converters               ="clr-namespace:FirePlatform.Mobile.Converters"
-    xmlns:customContol             ="clr-namespace:FirePlatform.Mobile.Controls">
+    xmlns            ="http://xamarin.com/schemas/2014/forms"
+    xmlns:x           ="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class           ="FirePlatform.Mobile.Pages.HomePage"
+    xmlns:syncfusion  ="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+    xmlns:data        ="clr-namespace:Syncfusion.DataSource;assembly=Syncfusion.DataSource.Portable"
+    xmlns:pageModels  ="clr-namespace:FirePlatform.Mobile.PageModels"
+    xmlns:converters  ="clr-namespace:FirePlatform.Mobile.Converters"
+    xmlns:customContol="clr-namespace:FirePlatform.Mobile.Controls">
     <ContentPage.Content>
         <Grid>
             <syncfusion:SfListView
@@ -17,7 +17,7 @@
                 AllowGroupExpandCollapse="True"
                 Margin                  ="5"
                 SelectionMode           ="None"
-                ItemsSource             ="{Binding ItemsControlLoader.ItemGroupCollection,Mode=TwoWay}">
+                ItemsSource             ="{Binding ItemGroupCollection,Mode=TwoWay}">
                 <syncfusion:SfListView.DataSource>
                     <data:DataSource>
                         <data:DataSource.GroupDescriptors>
@@ -68,6 +68,7 @@
                                         Text         ="{Binding Title}" />
                                     <customContol:CustomControl
                                         Grid.Column       ="2"
+                                        CollectionItems   ="{Binding Source={x:Reference listView}, Path=ItemsSource}"
                                         Item              ="{Binding .,Mode=TwoWay}"
                                         CurrentControlType="{Binding Type, Converter={converters:ControlTypeConverter}}" />
                                 </Grid>
