--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/App.xaml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/App.xaml
@@ -1,5 +1,129 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="CuttingSystem3mkMobile.App">
+<?xml version="1.0" encoding="utf-8"?>
+<Application
+    xmlns        ="http://xamarin.com/schemas/2014/forms"
+    xmlns:x       ="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class       ="CuttingSystem3mkMobile.App"
+    xmlns:triggers="clr-namespace:CuttingSystem3mkMobile.Triggers">
     <Application.Resources>
+        <Color
+            x:Key="WhiteColor">#ffffff</Color>
+        <Color
+            x:Key="BlackColor">#808080</Color>
+        <Color
+            x:Key="LightBlackColor">#F5F5F5</Color>
+        <Color
+            x:Key="DarkBlackColor">#000000</Color>
+        <Style
+            x:Key     ="BasedButtonStyle"
+            TargetType="Button">
+            <Setter
+                Property="HeightRequest"
+                Value   ="50" />
+            <Setter
+                Property="MinimumHeightRequest"
+                Value   ="35" />
+            <Setter
+                Property="FontSize"
+                Value   ="15" />
+        </Style>
+        <Style
+            x:Key     ="FillButtonStyle"
+            TargetType="Button"
+            BasedOn   ="{StaticResource BasedButtonStyle}">
+            <Setter
+                Property="TextColor"
+                Value   ="{StaticResource WhiteColor}" />
+            <Setter
+                Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList
+                    x:Name="CommonStates">
+                    <VisualStateGroup>
+                        <VisualState
+                            x:Name="Disabled">
+                            <VisualState.Setters>
+                                <Setter
+                                    Property="BackgroundColor"
+                                    Value   ="{StaticResource LightBlackColor}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState
+                            x:Name="Normal">
+                            <VisualState.Setters>
+                                <Setter
+                                    Property="BackgroundColor"
+                                    Value   ="{StaticResource BlackColor}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+            <Style.Triggers>
+                <EventTrigger
+                    Event="Pressed">
+                    <triggers:ButtonTriggerAction
+                        BackgroundColor="{StaticResource DarkBlackColor}" />
+                </EventTrigger>
+                <EventTrigger
+                    Event="Released">
+                    <triggers:ButtonTriggerAction
+                        BackgroundColor="{StaticResource BlackColor}" />
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style
+            x:Key     ="ButtonStyle"
+            TargetType="Button"
+            BasedOn   ="{StaticResource BasedButtonStyle}">
+            <Setter
+                Property="BackgroundColor"
+                Value   ="Transparent" />
+            <Setter
+                Property="BorderWidth"
+                Value   ="2" />
+            <Setter
+                Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList
+                    x:Name="CommonStates">
+                    <VisualStateGroup>
+                        <VisualState
+                            x:Name="Disabled">
+                            <VisualState.Setters>
+                                <Setter
+                                    Property="BorderColor"
+                                    Value   ="{StaticResource LightBlackColor}" />
+                                <Setter
+                                    Property="TextColor"
+                                    Value   ="{StaticResource LightBlackColor}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                        <VisualState
+                            x:Name="Normal">
+                            <VisualState.Setters>
+                                <Setter
+                                    Property="BorderColor"
+                                    Value   ="{StaticResource BlackColor}" />
+                                <Setter
+                                    Property="TextColor"
+                                    Value   ="{StaticResource BlackColor}" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+            <Style.Triggers>
+                <EventTrigger
+                    Event="Pressed">
+                    <triggers:ButtonTriggerAction
+                        BorderColor="{StaticResource DarkBlackColor}"
+                        TextColor  ="{StaticResource DarkBlackColor}" />
+                </EventTrigger>
+                <EventTrigger
+                    Event="Released">
+                    <triggers:ButtonTriggerAction
+                        BorderColor="{StaticResource BlackColor}"
+                        TextColor  ="{StaticResource BlackColor}" />
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
