--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
@@ -7,38 +7,54 @@
     x:TypeArguments                ="pageModels:DevicesPageModel"
     xmlns:base                     ="clr-namespace:CuttingSystem3mkMobile.Pages;assembly=Precision.Mobile"
     xmlns:controls                 ="clr-namespace:CuttingSystem3mkMobile.Controls"
-    NavigationPage.HasNavigationBar="false"
-    BackgroundImage                ="background.jpg">
-    <ContentView>
-        <ScrollView>
-            <controls:RepeaterView
-                HorizontalOptions="EndAndExpand"
-                Margin           ="10"
-                ItemsSource      ="{Binding Devices}"
-                Direction        ="Column"
-                Wrap             ="Wrap">
-                <controls:RepeaterView.ItemTemplate>
+    NavigationPage.HasNavigationBar="false">
+    <ContentView
+        ControlTemplate="{StaticResource ModalPage}"
+        BackgroundColor="#ededed">
+        <StackLayout
+            BackgroundColor="Transparent"
+            Padding        ="20,10,20,0">
+            <controls:CustomEntry
+                Placeholder     ="Search"
+                PressedColor    ="{StaticResource TextGrayColor}"
+                TextColor       ="{StaticResource TextGrayColor}"
+                InactiveColor   ="{StaticResource TextGrayColor}"
+                PlaceholderColor="{StaticResource TextGrayColor}"
+                BorderColor     ="{StaticResource TextGrayColor}" />
+            <ListView
+                BackgroundColor    ="Transparent"
+                ItemsSource        ="{Binding Devices}"
+                SelectedItem       ="{Binding SelectedDevice}"
+                SeparatorVisibility="None"
+                HasUnevenRows      ="true"
+                HorizontalOptions  ="FillAndExpand"
+                VerticalOptions    ="FillAndExpand">
+                <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout
-                                HeightRequest="200"
-                                WidthRequest ="150"
-                                Margin       ="5">
-                                <Frame
-                                    HeightRequest  ="160"
-                                    WidthRequest   ="140"
-                                    BackgroundColor="Red">
-                                </Frame>
-                                <Label
-                                    HorizontalOptions      ="Center"
-                                    HorizontalTextAlignment="Center"
-                                    Text                   ="{Binding Name}"
-                                    TextColor              ="White" />
-                            </StackLayout>
+                            <ViewCell.View>
+                                <StackLayout
+                                    Margin ="5"
+                                    Spacing="0">
+                                    <Frame
+                                        Padding        ="10,20,0,20"
+                                        BackgroundColor="White"
+                                        BorderColor    ="{StaticResource TextGrayColor}">
+                                        <Label
+                                            Text     ="{Binding Name}"
+                                            FontSize ="15"
+                                            TextColor="Black" />
+                                    </Frame>
+                                    <BoxView
+                                        Margin         ="0,-1,0,0"
+                                        HeightRequest  ="4"
+                                        BackgroundColor="{StaticResource DarkBlackColor}" />
+                                </StackLayout>
+                            </ViewCell.View>
                         </ViewCell>
                     </DataTemplate>
-                </controls:RepeaterView.ItemTemplate>
-            </controls:RepeaterView>
-        </ScrollView>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
     </ContentView>
 </base:BaseContentPage>
