--- a/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
+++ b/CuttingSystem3mkMobile/CuttingSystem3mkMobile/Pages/DevicesPage.xaml
@@ -15,6 +15,7 @@
             BackgroundColor="Transparent"
             Padding        ="20,10,20,0">
             <controls:CustomEntry
+                Text            ="{Binding SearchText}"
                 Placeholder     ="Search"
                 PressedColor    ="{StaticResource TextGrayColor}"
                 TextColor       ="{StaticResource TextGrayColor}"
